Fix loading overflow

--- a/web/styles.css
+++ b/web/styles.css
@@ -4,6 +4,10 @@ body {
 }
 
 .center {
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     position: absolute;
     top: 50%;
